--- a/style.css
+++ b/style.css
@@ -1,3 +1,72 @@
+h1{
+    font-family: 'Poppins', sans-serif;;
+    color: rgb(135, 47, 47);
+    text-align-last: center;
+    font-size: 55px;
+}
+
+hr{
+    height: 5px;
+    background-color: rgb(135, 47, 47);
+    width: 700px;
+}
+
+body{
+    background-color: #e2e1d9;
+    height:800px;
+}
+/* Makes the game board*/
+/* grid template makes the columns (w3schools)*/
+#container{
+   width:450px;
+   display:grid;
+   margin:auto;
+   grid-template-columns: auto auto auto;
+   flex-wrap: wrap;
+   margin-top: 40px;
+   
+}
+.square{
+    height: 150px;
+    width: 150px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    color: rgb(10, 6, 6);
+    font-size: 120px;
+    border: 4px solid; 
+    position: relative;
+}
+
+
+.restart{
+    background-color: white;
+    color: rgb(135, 47, 47);
+    border: 2px solid rgb(135, 47, 47);
+    border-radius: 8px;
+    font-size: 50px;
+    text-decoration: none;
+    display: inline-block;
+    padding: 10px 15px;
+    font-family: 'Poppins', sans-serif;
+    transition-duration: 0.4s;
+    font-weight:bold;
+}
+
+.restart:hover{
+    background-color: rgb(135, 47, 47); 
+    color: white;
+    box-shadow: 0 12px 16px 0 rgba(0,0,0,0.24), 0 17px 50px 0 rgba(0,0,0,0.19);
+}
+
+#restartButton{
+    margin: 0;
+  position:absolute;
+  top: 95%;
+  left: 50%;
+  -ms-transform: translate(-50%, -50%);
+  transform: translate(-50%, -50%);
+}
 
 
 
